# libmapper

./: .gitignore  CMakeLists.txt  NEWS.markdown  configure.ac  windows_build.ps1
bindings/python/: Makefile.am  manylinux.sh  pyproject.toml  setup.py.in  test.py  testcallbacks.py  testconvergent.py  testgetvalue.py  testinstance.py  testmapfromstr.py  testmonitor.py  testnumpy.py  testrefcount.py  testreverse.py  testvector.py  windows_build_wheel.ps1
bindings/python/libmapper/: __init__.py  mapper.py.in
bindings/python/tests/: test.py  testcallbacks.py  testconvergent.py  testgetvalue.py  testinstance.py  testmapfromstr.py  testnumpy.py  testrefcount.py  testreverse.py  testvector.py  tkgui.py
ctypes/: mapper.py  test.py
doc/: expression_syntax.md
examples/: pwm_example.cpp  pyo_example.py  pyo_example_instanced.py  pyside_gui_label_example.py
jni/: mapperjni.c
src/: Makefile.am  admin.c  connection.c  database.c  db.c  device.c  device.h  expression.c  expression.h  graph.c  graph.h  id_map.c  id_map.h  libmapper.def  link.c  link.h  list.c  map.c  map.h  mapper_internal.h  mapper_table.h  monitor.c  mpr_signal.h  mpr_time.h  network.c  network.h  object.c  object.h  params.c  properties.c  property.c  property.h  receiver.c  router.c  signal.c  slot.c  slot.h  table.c  table.h  time.c  (+3 more)
swig/: mapper.i  testmetronome.py
test/: Makefile.am  test.c  test_time_sync.c  testadmin.c  testbundle.c  testcalibrate.c  testconnectionproto.c  testconvergent.c  testcpp.cpp  testcustomtransport.c  testexpression.c  testgraph.c  testhierarchialstructure.c  testlist.c  (+40 more)
(+47 files in other folders)
